kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: ee-homework-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - command:
        - /app
        image: lukaswoj/ee-homework:latest
        name: ee-homework
        ports:
        - containerPort: 8080
